feat: custom working directory